--- a/AirportManagement.SPA/src/app/passanger/passanger-details/passanger-details.component.html
+++ b/AirportManagement.SPA/src/app/passanger/passanger-details/passanger-details.component.html
@@ -7,6 +7,7 @@
     <div>{{Passanger.updatedAt}}</div>
     <div>{{Passanger.countryOfCitizenship}}</div>
     <div>{{Passanger.countryOfResidence}}</div>
+    <h4 class="text-center">Security Check</h4>
     <div class="table-responsive" style="text-align: center;">
         <table class="table table-hover table-bordered table-striped">
             <thead>
@@ -18,7 +19,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let securityCheck of Passanger.SecurityChecks | async; index as i">
+                <tr *ngFor="let securityCheck of Passanger.securityChecks">
                     <td>{{ securityCheck.checkResult }}</td>
                     <td>{{ securityCheck.comments }}</td>
                     <td>{{ securityCheck.createdAt }}</td>
@@ -27,4 +28,104 @@
             </tbody>
         </table>
     </div>
+    <h4 class="text-center">Booking</h4>
+    <div class="table-responsive" style="text-align: center;">
+        <table class="table table-hover table-bordered table-striped">
+            <thead>
+                <tr>
+                    <th scope="col">Booking Platform</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">Created At</th>
+                    <th scope="col">Updated At</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let booking of Passanger.bookings">
+                    <td>{{ booking.bookingPlatform }}</td>
+                    <td>{{ booking.status }}</td>
+                    <td>{{ booking.createdAt }}</td>
+                    <td>{{ booking.updatedAt }}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <h4 class="text-center">Baggage</h4>
+    <div *ngFor="let booking of Passanger.bookings" class="table-responsive" style="text-align: center;">
+        <table class="table table-hover table-bordered table-striped">
+            <thead>
+                <tr>
+                    <th scope="col">Check Result</th>
+                    <th scope="col">Created Date</th>
+                    <th scope="col">Updated Date</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let baggage of booking.baggages">
+                    <td>{{ baggage.weightInKG }}</td>
+                    <td>{{ baggage.createdDate }}</td>
+                    <td>{{ baggage.updatedDate }}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <h4 class="text-center">Baggage Checks</h4>
+    <div *ngFor="let booking of Passanger.bookings" class="table-responsive" style="text-align: center;">
+        <table class="table table-hover table-bordered table-striped">
+            <thead>
+                <tr>
+                    <th scope="col">Check Result</th>
+                    <th scope="col">Created At</th>
+                    <th scope="col">Updated At</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let baggageChecks of booking.baggageChecks">
+                    <td>{{ baggageChecks.checkResult }}</td>
+                    <td>{{ baggageChecks.createdAt }}</td>
+                    <td>{{ baggageChecks.updatedAt }}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <h4 class="text-center">Boarding Pass</h4>
+    <div *ngFor="let booking of Passanger.bookings" class="table-responsive" style="text-align: center;">
+        <table class="table table-hover table-bordered table-striped">
+            <thead>
+                <tr>
+                    <th scope="col">QR Code</th>
+                    <th scope="col">Created At</th>
+                    <th scope="col">Updated At</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let boardingPasses of booking.boardingPasses">
+                    <td>{{ boardingPasses.qrCode }}</td>
+                    <td>{{ boardingPasses.createdAt }}</td>
+                    <td>{{ boardingPasses.updatedAt }}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <h4 class="text-center">Flight Manifest</h4>
+    <div *ngFor="let booking of Passanger.bookings" class="table-responsive" style="text-align: center;">
+        <table class="table table-hover table-bordered table-striped">
+            <thead>
+                <tr>
+                    <th scope="col">Created At</th>
+                    <th scope="col">Updated At</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let flightManifests of booking.flightManifests">
+                    <td>{{ flightManifests.createdAt }}</td>
+                    <td>{{ flightManifests.updatedAt }}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
 </div>
