--- a/AirportManagement.SPA/src/app/passanger/passanger-details/passanger-details.component.html
+++ b/AirportManagement.SPA/src/app/passanger/passanger-details/passanger-details.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <h1 class="text-center">Passanger Details</h1>
     <div class="table-responsive" style="text-align: center;">
-        <table class="table table-hover table-bordered table-striped">
+        <table class="table table-bordered table-striped">
             <tbody>
                 <tr>
                   <td><h4>First Name: </h4>{{Passanger.firstName}}</td>
