--- a/AirportManagement.SPA/src/app/passanger/passanger.component.html
+++ b/AirportManagement.SPA/src/app/passanger/passanger.component.html
@@ -38,6 +38,10 @@
                 </div>
             </div>
         </form>    
-    <div col-md-3>
-    </div>
+        <div class="d-flex justify-content-center">
+            <pagination [boundaryLinks]="true" [totalItems]="77"
+            previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
+ 
+</pagination>
+        </div>
 </div>
