Working on Pagination Navigation Bar

--- a/AirportManagement.SPA/src/app/passanger/passanger.component.html
+++ b/AirportManagement.SPA/src/app/passanger/passanger.component.html
@@ -44,8 +44,11 @@
             [itemsPerPage]="pagination!.itemsPerPage"
             [(ngModel)]="pagination!.currentPage"
             (pageChanged)="pageChanged($event)"
+            [maxSize]="pagination?.totalPages"
             previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
  
 </pagination>
+
+
         </div>
 </div>
