--- a/AirportManagement.SPA/src/app/passanger/passanger.component.html
+++ b/AirportManagement.SPA/src/app/passanger/passanger.component.html
@@ -18,8 +18,8 @@
                             <div class="col">
                                 
                             </div>
-                            <div class="col border text-right">
-                                <h5>Page Size</h5>
+                            <div class="col text-right">
+                                <h5 style="text-align: right;">Page Size</h5>
                             </div>
                             <div class="col">
                                 <input name="pageSize" rows="6" class="col form-control" [(ngModel)]="this.pagination!.itemsPerPage"/>
