--- a/AirportManagement.SPA/src/app/passanger/passanger-insert/passanger-insert/passanger-insert.component.html
+++ b/AirportManagement.SPA/src/app/passanger/passanger-insert/passanger-insert/passanger-insert.component.html
@@ -54,6 +54,12 @@
                             </div>
                         </div>
                         <br/>
+                      <div class="form-group">
+                            <div class="col-sm-10">
+                                <label type="text" class="form-control" id="txtSecurityChecks" formControlName="passportNumber" placeholder="Passport Number">
+                            </div>
+                        </div>
+                        <br/>
                                                 <div class="form-group">
                             <div class="container">
                                 <div class="row">
